# connector

./: CMakeLists.txt  LICENSE
example/: main.cpp
include/: emitter.h
